kubeflow-azimuth/kubeflow-azimuth-chart/templates/cluster-local-gateway-558.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    managed-by: kubeflow-azimuth-app
  name: cluster-local-gateway
  namespace: istio-system
spec:
  action: ALLOW
  rules:
  - {}
  selector:
    matchLabels:
      app: cluster-local-gateway
      istio: cluster-local-gateway
      managed-by: kubeflow-azimuth-app
